--- a/src/scss/application/global/_variables.scss
+++ b/src/scss/application/global/_variables.scss
@@ -1,7 +1,6 @@
 ////////////////////////////////////////////////////////////////////////////////
-// Application Variables
+// Application Variables (v2.0.0)
 //
-// DO NOT DELETE. Should contain all application variables and framework
-// variable overrides. Use the variables defined in
-// src/scss/framework/global/_variables.scss for reference.
+// DO NOT DELETE. Should contain all application variables and Frontend variable
+// overrides. Clone src/scss/frontend/global/_variables.scss as a start.
 ////////////////////////////////////////////////////////////////////////////////
