--- a/src/scss/frontend/global/_global.scss
+++ b/src/scss/frontend/global/_global.scss
@@ -1,9 +1,10 @@
 ////////////////////////////////////////////////////////////////////////////////
-// Global Partial
+// Frontend Global Partials
 //
 // Includes all required framework functions, mixins and default variables.
 //
-// DO NOT EDIT to allow for easier Frontend updates.
+// DO NOT EDIT! To add/override styles, create a _global.scss file in
+// src/scss/application/global.
 ////////////////////////////////////////////////////////////////////////////////
 
 /* Compass & Singularity Extensions */
