--- a/src/scss/frontend/components/classes/_alignment.scss
+++ b/src/scss/frontend/components/classes/_alignment.scss
@@ -1,7 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 // Frontend Alignment Styles
 //
-// Includes all Frontend alignment styles.
+// DO NOT EDIT! Contains all of Frontend's pre-packaged alignment class styles.
 ////////////////////////////////////////////////////////////////////////////////
 
 
