--- a/src/scss/frontend/components/classes/_layout.scss
+++ b/src/scss/frontend/components/classes/_layout.scss
@@ -1,23 +1,8 @@
 ////////////////////////////////////////////////////////////////////////////////
-// Layout Partials
+// Frontend Layout Styles
 //
-// These files should only include layout styles. This includes grid styles and
-// main page layouts.
+// DO NOT EDIT! Contains all of Frontend's pre-packaged layout class styles.
 ////////////////////////////////////////////////////////////////////////////////
-
-@include add-grid($num-columns);                   // Mobile
-@include add-grid($num-columns-small at $small);   // Tablet & up
-@include add-grid($num-columns-medium at $medium); // Desktop & up
-@include add-grid($num-columns-large at $large);   // Large screens
-
-@include add-gutter($gutter-padding);                   // Mobile
-@include add-gutter($gutter-padding-small at $small);   // Tablet & up
-@include add-gutter($gutter-padding-medium at $medium); // Desktop & up
-@include add-gutter($gutter-padding-large at $large);   // Large screens
-
-@include add-gutter-style($gutter-style);
-
-/* Components */
 
 .container {
   @extend %container;
@@ -26,9 +11,6 @@
 .container-full {
   @extend %container-full;
 }
-
-
-/* Elements */
 
 // Build additional mobile columns using the format below:
 // (.col-NUM_COL_SPAN-STARTING_AT)
@@ -60,7 +42,34 @@
 @include breakpoint($large) {
   // Build additional desktop columns using the format below:
   // (.col-NUM_COL_SPAN-STARTING_AT-large)
-  .col-#{$num-columns-large}-1-small {
+  .col-#{$num-columns-large}-1-large {
     @include grid-span($num-columns-large, 1);
   }
+}
+
+.no-margin {
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+}
+
+.no-padding {
+  padding-top: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+}
+
+.round {
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+.clearfix {
+  @include clearfix;
+}
+
+.flex {
+  @extend %flex;
 }
