--- a/src/scss/frontend/base/_typography.scss
+++ b/src/scss/frontend/base/_typography.scss
@@ -74,6 +74,7 @@ h6 {
   margin-top: 0;
   margin-bottom: $header-margin-bottom;
   line-height: $header-lineheight;
+  letter-spacing: $header-letter-spacing;
 
   small {
     color: $header-small-font-color;
