--- a/src/scss/frontend/components/classes/_header.scss
+++ b/src/scss/frontend/components/classes/_header.scss
@@ -7,11 +7,11 @@
 /* Components */
 
 .header {
-  border-bottom: $header-border-bottom;
-  margin-bottom: $header-margin-bottom;
-  padding-top: $header-padding-top;
-  padding-bottom: $header-padding-bottom;
-  background: $header-background;
+  border-bottom: $site-header-border-bottom;
+  margin-bottom: $site-header-margin-bottom;
+  padding-top: $site-header-padding-top;
+  padding-bottom: $site-header-padding-bottom;
+  background: $site-header-background;
 }
 
 
