--- a/src/scss/frontend/components/classes/_visibility.scss
+++ b/src/scss/frontend/components/classes/_visibility.scss
@@ -46,33 +46,5 @@
 }
 
 .screen-reader-text {
-  clip: rect(rem-calc(1), rem-calc(1), rem-calc(1), rem-calc(1));
-  height: rem-calc(1);
-  overflow: hidden;
-  position: absolute !important;
-  width: rem-calc(1);
-  margin-bottom: rem-calc(-1);
-  padding: 0;
-  border: 0;
-  word-wrap: normal !important;
-
-  &:focus {
-    background-color: #f1f1f1;
-    border-radius: rem-calc($global-radius);
-    box-shadow: rem-calc(0 0 2 2) rgba(0, 0, 0, 0.6);
-    clip: auto !important;
-    color: #21759b;
-    display: block;
-    font-size: 14px;
-    font-weight: bold;
-    height: auto;
-    line-height: normal;
-    padding: rem-calc(15 23 14);
-    position: absolute;
-    left: rem-calc(5);
-    top: rem-calc(5);
-    text-decoration: none;
-    width: auto;
-    z-index: 100000; /* Above WP toolbar */
-  }
+  @extend %screen-reader-text;
 }
