--- a/src/scss/frontend/global/_variables.scss
+++ b/src/scss/frontend/global/_variables.scss
@@ -18,15 +18,15 @@ $global-width-large:       1400px                                      !default;
 
 $global-font-size:         16px                                        !default; // Mobile
 $global-font-size-small:   $global-font-size                           !default; // Tablet & up
-$global-font-size-medium:  $global-font-size                           !default; // Desktop & up
-$global-font-size-large:   $global-font-size                           !default; // Large screens & up
+$global-font-size-medium:  $global-font-size-small                     !default; // Desktop & up
+$global-font-size-large:   $global-font-size-medium                    !default; // Large screens & up
 
 $rem-base:                 $global-font-size                           !default;
 
 $global-lineheight:         1.3                                        !default; // Mobile
 $global-lineheight-small:   $global-lineheight                         !default; // Tablet & up
-$global-lineheight-medium:  $global-lineheight                         !default; // Desktop & up
-$global-lineheight-large:   $global-lineheight                         !default; // Large screens & up
+$global-lineheight-medium:  $global-lineheight-small                   !default; // Desktop & up
+$global-lineheight-large:   $global-lineheight-medium                  !default; // Large screens & up
 
 $primary-color:            #00b282                                     !default;
 $secondary-color:          #0093bb                                     !default;
@@ -54,6 +54,7 @@ $body-antialiased:         true                                        !default;
 $global-margin:            30px                                        !default;
 $global-padding:           30px                                        !default;
 
+$global-weight-light:      300                                         !default;
 $global-weight-normal:     400                                         !default;
 $global-weight-medium:     500                                         !default;
 $global-weight-semibold:   600                                         !default;
@@ -66,19 +67,41 @@ $global-transition-timing: .2s                                         !default;
 $global-box-sizing:        border-box                                  !default;
 
 
-// 2. Breakpoints
+// 2. Grid
 // -----------------------------------------------------------------------------
 
-$small:        $global-width-small                                     !default; // Tablet & up
-$medium:       $global-width-medium                                    !default; // Desktop & up
-$large:        $global-width-large                                     !default; // Large screens
+$num-columns:        1                                                 !default; // Mobile & up
+$num-columns-small:  $num-columns                                      !default; // Tablet & up
+$num-columns-medium: $num-columns-small                                !default; // Tablet & up
+$num-columns-large:  $num-columns-medium                               !default; // Desktop & up
+
+$gutter-padding:        30px                                           !default; // Mobile & up
+$gutter-padding-small:  $gutter-padding                                !default; // Tablet & up
+$gutter-padding-medium: $gutter-padding-small                          !default; // Desktop & up
+$gutter-padding-large:  $gutter-padding-medium                         !default; // Large screens & up
+
+$include-clearfix:   true                                              !default;
+$gutter-style:       'fixed'                                           !default;
+
+// Internal variables used for text direction
+$global-left:  if($global-text-direction == rtl, right, left)          !default;
+$global-right: if($global-text-direction == rtl, left, right)          !default;
+
+
+
+// 3. Breakpoints
+// -----------------------------------------------------------------------------
+
+$small:        $global-width-small + $gutter-padding-small             !default; // Tablet & up
+$medium:       $global-width-medium + $gutter-padding-medium           !default; // Desktop & up
+$large:        $global-width-large + $gutter-padding-large             !default; // Large screens
 
 $small-down:   0px $small                                              !default; // Tablet & up
 $medium-down:  0px $medium                                             !default; // Desktop & up
 $large-down:   0px $large                                              !default; // Large screens
 
 
-// 3. Base Typography
+// 4. Base Typography
 // -----------------------------------------------------------------------------
 
 $font-family-monospace:    "Courier New", Courier, monospace           !default;
@@ -92,6 +115,7 @@ $header-lineheight:        $global-lineheight                          !default;
 $header-margin-bottom:     rem-calc($global-margin)                    !default;
 $header-text-rendering:    optimizeLegibility                          !default;
 $header-small-font-color:  $dark-gray                                  !default;
+$header-letter-spacing:    normal                                      !default;
 
 // These should not be used to define sizes within stylesheets. Instead, use the
 // font sizes defined in the next section below.
@@ -164,7 +188,7 @@ $keystroke-radius:            rem-calc($global-radius)                 !default;
 $abbr-underline:              rem-calc(1) dotted $black                !default;
 
 
-// 4. Forms
+// 5. Forms
 // -----------------------------------------------------------------------------
 
 $fieldset-border:         rem-calc(1) solid $gray                      !default;
@@ -214,7 +238,7 @@ $placeholder-font-family:    $input-font-family                        !default;
 $placeholder-text-transform: none                                      !default;
 
 
-// 5. Table
+// 6. Table
 // -----------------------------------------------------------------------------
 
 $table-background:         $white                                      !default;
@@ -226,27 +250,6 @@ $table-stripe:             even                                        !default;
 $table-head-background:    smart-scale($table-background, $table-color-scale / 2) !default;
 $table-foot-background:    smart-scale($table-background, $table-color-scale) !default;
 $table-head-font-color:    $body-font-color                            !default;
-
-
-// 6. Grid
-// -----------------------------------------------------------------------------
-
-$num-columns:        1                                                 !default; // Mobile & up
-$num-columns-small:  $num-columns                                      !default; // Tablet & up
-$num-columns-medium: $num-columns                                      !default; // Tablet & up
-$num-columns-large:  $num-columns                                      !default; // Desktop & up
-
-$gutter-padding:        30px                                           !default; // Mobile & up
-$gutter-padding-small:  $gutter-padding                                !default; // Tablet & up
-$gutter-padding-medium: $gutter-padding                                !default; // Desktop & up
-$gutter-padding-large:  $gutter-padding                                !default; // Large screens & up
-
-$include-clearfix:   true                                              !default;
-$gutter-style:       'split'                                           !default;
-
-// Internal variables used for text direction
-$global-left:  if($global-text-direction == rtl, right, left)          !default;
-$global-right: if($global-text-direction == rtl, left, right)          !default;
 
 
 // 7. Frontend
@@ -295,11 +298,11 @@ $button-font-family:      $body-font-family                            !default;
 $button-text-transform:   none                                         !default;
 $button-font-weight:      $global-weight-bold                          !default;
 
-$header-border-bottom:   rem-calc(1) solid $gray                       !default;
-$header-padding-top:     rem-calc($global-margin)                      !default;
-$header-padding-bottom:  rem-calc($global-margin - $global-padding)    !default;
-$header-margin-bottom:   rem-calc($global-margin)                      !default;
-$header-background:      rgba($body-background, .95)                   !default;
+$site-header-border-bottom:   rem-calc(1) solid $gray                  !default;
+$site-header-padding-top:     rem-calc($global-padding / 2)            !default;
+$site-header-padding-bottom:  rem-calc($global-padding / 2)            !default;
+$site-header-margin-bottom:   rem-calc($global-margin)                 !default;
+$site-header-background:      $body-background                         !default;
 
 $callout-background:     rgba($info-color, .3)                         !default;
 $callout-padding:        rem-calc($global-padding)                     !default;
